Started cleaning up a ton of the styling issues that keep cropping up around Atheos. Mainly just fine tuning the look and feel and hopefully coming to fix the awful dialog boxes

--- a/themes/atheos/modules/common/_input.scss
+++ b/themes/atheos/modules/common/_input.scss
@@ -7,7 +7,7 @@ textarea {
 	width: 100%;
 	padding: 7px 10px;
 	margin: 5px 0;
-	background-color: $input-background;
+	background-color: $inputBackground;
 	border: none;
 	border-bottom: 2px solid #595959;
 	color: #fff;
@@ -24,7 +24,7 @@ textarea {
 }
 
 select option {
-	background-color: $input-background;
+	background-color: $inputBackground;
 }
 
 textarea {
@@ -35,6 +35,6 @@ input:focus,
 select:focus,
 textarea:focus {
 	outline: none;
-	background-color: $input-background;
+	background-color: $inputBackground;
 	border-bottom: 2px solid #ccc;
 }
